[package]
name = "botnode"
version = "0.1.0"
authors = ["featherenvy <featherenvy@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-channel = "1.6.1"
async-codec = "0.4.1"
async-h1 = "2.3.3"
async-shutdown = "0.1.2"
async-std = { version = "1.10.0", features = ["attributes"] }
async-tls = "0.11.0"
async-trait = "0.1.52"
async-tungstenite = { version = "0.16.1", features = ["async-native-tls"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
glommio = "0.6.0"
http-types = "2.12.0"
ring-channel = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
signal-hook = "0.3.12"
signal-hook-async-std = "0.2.1"
simd-json = "0.4.13"
surf = { version = "2.3.2", features = ["h1-client-rustls"] }
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "parking_lot"] }

botvana = { path = "../botvana" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "serde_zero_copy_benchmark"
harness = false
