[package]
name = "botnode"
version = "0.1.0"
authors = ["featherenvy <featherenvy@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
arrayvec = "0.7.2"
async-shutdown = "0.1.2"
async-trait = "0.1.52"
async-tungstenite = { version = "0.16.1", features = ["async-native-tls"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
#glommio = "0.6.0"
glommio = { git = "https://github.com/DataDog/glommio.git" }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.72"
signal-hook = "0.3.12"
signal-hook-async-std = "0.2.1"
simd-json = "0.4.13"
snmalloc-rs = "0.2.28"
surf = { version = "2.3.2", features = ["h1-client-rustls"] }
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "parking_lot"] }

botvana = { path = "../botvana" }
metered = "0.8.0"
serde-aux = "3.0.1"

[dev-dependencies]
criterion = "0.3.5"
smol = "1.2.5"
