[package]
name = "botvana-server"
version = "0.1.0"
authors = ["featherenvy <featherenvy@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-codec = "0.4.1"
async-shutdown = "0.1.2"
async-std = "1.10.0"
async-tungstenite = { version = "0.16.0", features = ["async-native-tls"] }
figment = { version = "0.10.6", features = ["toml", "env"] }
futures = "0.3"
glommio = "0.6.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
shutdown = "0.2.0"
signal-hook = "0.3.12"
signal-hook-async-std = "0.2.1"
thiserror = "1.0.30"
tide = "0.16.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

botvana = { path = "../botvana" }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
