[package]
name = "botvana"
version = "0.1.0"
authors = ["featherenvy <featherenvy@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-codec = "0.4.1"
async-std = { version = "1.10.0", features = ["attributes"] }
bincode = "1.3.3"
chrono = "0.4.19"
rust_decimal = "1.18.0"
serde = { version = "1.0.130", features = ["derive"] }
soa_derive = "0.11.0"
thiserror = "1.0.30"
tracing = "0.1.29"

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
criterion = "0.3.5"
futures = "0.3"
smol = "1.2.5"

[[bench]]
name = "orderbook_update_benchmark"
harness = false

