[package]
name = "server-test"
version = "0.1.0"
authors = ["featherenvy <featherenvy@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-codec = "0.4.1"
async-std = { version = "1.10.0", features = ["attributes"] }
botvana = { path = "../botvana" }
futures = "0.3"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
