[package]
name = "station-egui"
version = "0.1.0"
authors = ["featherenvy <featherenvy@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
botvana = { path = "../botvana" }
crossbeam-channel = "0.5.1"
eframe = "0.15.0" # Gives us egui, epi and web+native backends

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = "0.16.0"
url = "2.2.2"

[features]
default = []
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

# [profile.release]
# opt-level = 2 # fast and small wasm

# [patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
