[package]
name = "engine-channels-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-shutdown = "0.1.2"
async-trait = "0.1.52"
glommio = "0.6.0"
ring-channel = "0.10.0"
thiserror = "1.0.30"
tracing = "0.1.29"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async"] }

[[bench]]
name = "shared_channel_bench"
harness = false
